REKDAT-627: Fix sticky sorting select alignment in sidebar

--- a/ckanext/ckanext-apicatalog/scss/layout.scss
+++ b/ckanext/ckanext-apicatalog/scss/layout.scss
@@ -408,6 +408,7 @@
   .form-select {
     border: none;
     box-shadow: none;
+    padding-left: 0;
     padding-right: 0;
     --bs-form-select-bg-img: none;
   }
